Fixed the css break in findtalent due to findwork

--- a/client/src/pages/FindWork/FindWork.scss
+++ b/client/src/pages/FindWork/FindWork.scss
@@ -8,7 +8,7 @@
       margin-bottom: 30px;
     }
 
-    .categories-slider {
+    .find-work-categories {
       display: flex;
       flex-wrap: wrap;
       margin-bottom: 40px;
